# fakecloud

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  conformance-baseline.json  docker-compose.yml
.config/: nextest.toml
.github/workflows/: ci.yml  conformance.yml  docker.yml  e2e.yml  examples.yml  moto-compat.yml  release.yml  sdk-go.yml  sdk-python.yml  sdk-typescript.yml  security.yml  website.yml
aws-models/: cognito-identity-provider.json  elasticache.json  service-map.json  sesv2.json
crates/fakecloud-apigatewayv2/: Cargo.toml
crates/fakecloud-apigatewayv2/src/: cors.rs  http_proxy.rs  lambda_proxy.rs  lib.rs  mock.rs  router.rs  service.rs  state.rs
crates/fakecloud-aws/: Cargo.toml
crates/fakecloud-aws/src/: arn.rs  error.rs  lib.rs  sigv4.rs  time.rs  xml.rs
crates/fakecloud-bedrock/: Cargo.toml
crates/fakecloud-bedrock/src/: async_invoke.rs  automated_reasoning.rs  automated_reasoning_workflows.rs  converse.rs  custom_model_deployments.rs  custom_models.rs  customization.rs  enforced_guardrails.rs  evaluation.rs  foundation_model_agreements.rs  guardrails.rs  inference_profiles.rs  invocation_jobs.rs  invoke.rs  lib.rs  logging.rs  marketplace.rs  model_copy.rs  model_import.rs  models.rs  prompt_routers.rs  resource_policies.rs  service.rs  state.rs  streaming.rs  throughput.rs
crates/fakecloud-cloudformation/: Cargo.toml
crates/fakecloud-cloudformation/src/: lib.rs  resource_provisioner.rs  service.rs  state.rs  template.rs  xml_responses.rs
crates/fakecloud-cognito/: Cargo.toml
crates/fakecloud-cognito/src/: lib.rs  service.rs  state.rs  triggers.rs
crates/fakecloud-cognito/src/service/: auth.rs  branding.rs  config.rs  groups.rs  identity_providers.rs  legacy.rs  mfa.rs  misc.rs  mod.rs  user_pools.rs  users.rs
crates/fakecloud-conformance/: Cargo.toml
crates/fakecloud-conformance-macros/: Cargo.toml
crates/fakecloud-conformance-macros/src/: lib.rs
crates/fakecloud-conformance/src/: audit.rs  lib.rs  main.rs  probe.rs  smithy.rs
crates/fakecloud-conformance/src/generators/: mod.rs  proptest_gen.rs
crates/fakecloud-conformance/tests/: bedrock.rs  cloudformation.rs  cognito.rs  dynamodb.rs  elasticache.rs  eventbridge.rs  iam.rs  kinesis.rs  kms.rs  lambda.rs  logs.rs  rds.rs  s3.rs  secretsmanager.rs  ses.rs  sns.rs  sqs.rs  ssm.rs  stepfunctions.rs  sts.rs
crates/fakecloud-conformance/tests/helpers/: mod.rs
crates/fakecloud-core/: Cargo.toml
crates/fakecloud-core/src/: delivery.rs  dispatch.rs  lib.rs  protocol.rs  query.rs  registry.rs  service.rs  validation.rs
crates/fakecloud-dynamodb/: Cargo.toml
crates/fakecloud-e2e/: Cargo.toml
crates/fakecloud-e2e/src/: lib.rs
crates/fakecloud-e2e/tests/: apigatewayv2.rs  bedrock.rs  cloudformation.rs  cognito.rs  cross_service.rs  dynamodb.rs  elasticache.rs  eventbridge.rs  iam.rs  kinesis.rs  kms.rs  lambda.rs  lambda_integration.rs  lambda_invoke.rs  logs.rs  multiservice.rs  rds.rs  s3.rs  sdk.rs  secretsmanager.rs  ses.rs  ses_receipt_rules.rs  ses_v1.rs  smoke.rs  sns.rs  sqs.rs  ssm.rs  stepfunctions.rs
crates/fakecloud-e2e/tests/helpers/: mod.rs
crates/fakecloud-elasticache/: Cargo.toml
crates/fakecloud-elasticache/src/: lib.rs  runtime.rs  service.rs  state.rs
crates/fakecloud-eventbridge/: Cargo.toml
crates/fakecloud-iam/: Cargo.toml
crates/fakecloud-kinesis/: Cargo.toml
crates/fakecloud-kinesis/src/: delivery.rs  lib.rs  service.rs  state.rs
crates/fakecloud-kms/: Cargo.toml
crates/fakecloud-kms/src/: service.rs  state.rs
crates/fakecloud-lambda/: Cargo.toml
crates/fakecloud-lambda/src/: runtime.rs  service.rs  state.rs
crates/fakecloud-logs/: Cargo.toml
crates/fakecloud-logs/src/: lib.rs  query.rs  service.rs  state.rs  transformer.rs
crates/fakecloud-logs/src/service/: anomaly.rs  deliveries.rs  destinations.rs  exports.rs  filters.rs  groups.rs  misc.rs  mod.rs  policies.rs  queries.rs  streams.rs  tags.rs
crates/fakecloud-rds/: Cargo.toml
crates/fakecloud-rds/src/: runtime.rs  service.rs  state.rs
crates/fakecloud-s3/: Cargo.toml
crates/fakecloud-s3/src/: inventory.rs  lib.rs  lifecycle.rs  logging.rs  service.rs  simulation.rs  state.rs
crates/fakecloud-s3/src/service/: acl.rs  buckets.rs  config.rs  lock.rs  mod.rs  multipart.rs  notifications.rs  objects.rs  tags.rs
crates/fakecloud-sdk/: Cargo.toml  README.md
crates/fakecloud-sdk/src/: client.rs  error.rs  lib.rs  types.rs
crates/fakecloud-secretsmanager/: Cargo.toml
crates/fakecloud-server/: Cargo.toml
crates/fakecloud-server/src/: dynamodb_streams_lambda_poller.rs  lambda_delivery.rs  main.rs  sqs_lambda_poller.rs  stepfunctions_delivery.rs
crates/fakecloud-ses/: Cargo.toml
crates/fakecloud-ses/src/: fanout.rs  lib.rs  service.rs  state.rs  v1.rs
crates/fakecloud-ses/src/service/: account.rs  configuration_sets.rs  contact_lists.rs  identities.rs  misc.rs  mod.rs  sending.rs  suppression.rs  templates.rs
crates/fakecloud-sns/: Cargo.toml
crates/fakecloud-sqs/: Cargo.toml
crates/fakecloud-sqs/src/: delivery.rs  lib.rs  service.rs  simulation.rs  state.rs
crates/fakecloud-ssm/: Cargo.toml
crates/fakecloud-ssm/src/: service.rs  state.rs
crates/fakecloud-ssm/src/service/: associations.rs  automation.rs  commands.rs  compliance.rs  documents.rs  instances.rs  inventory.rs  maintenance.rs  misc.rs  mod.rs  ops.rs  parameters.rs  patches.rs  resource_sync.rs  sessions.rs  tags.rs
crates/fakecloud-stepfunctions/: Cargo.toml
crates/fakecloud-stepfunctions/src/: choice.rs  error_handling.rs  interpreter.rs  io_processing.rs  lib.rs  service.rs  state.rs
docs/: index.html
examples/: docker-compose.yml
examples/node/: demo.js
examples/python/: demo.py
examples/sample-app/: README.md  app.py
examples/terraform/: README.md  main.tf  outputs.tf
scripts/: e2e_nextest_partitions.py  update-aws-models.sh
sdks/go/: README.md  (+18 more)
sdks/python/: README.md  pyproject.toml
sdks/python/src/fakecloud/: __init__.py  client.py  types.py
sdks/python/tests/: test_client.py
website/: config.toml
(+71 files in other folders)
