[workspace]
members = [
    "crates/fakecloud-server",
    "crates/fakecloud-core",
    "crates/fakecloud-aws",
    "crates/fakecloud-sqs",
    "crates/fakecloud-sns",
    "crates/fakecloud-eventbridge",
    "crates/fakecloud-iam",
    "crates/fakecloud-ssm",
    "crates/fakecloud-s3",
    "crates/fakecloud-dynamodb",
    "crates/fakecloud-lambda",
    "crates/fakecloud-secretsmanager",
    "crates/fakecloud-logs",
    "crates/fakecloud-kms",
    "crates/fakecloud-cloudformation",
    "crates/fakecloud-ses",
    "crates/fakecloud-cognito",
    "crates/fakecloud-kinesis",
    "crates/fakecloud-rds",
    "crates/fakecloud-elasticache",
    "crates/fakecloud-stepfunctions",
    "crates/fakecloud-apigatewayv2",
    "crates/fakecloud-bedrock",
    "crates/fakecloud-sdk",
    "crates/fakecloud-e2e",
    "crates/fakecloud-conformance",
    "crates/fakecloud-conformance-macros",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/faiscadev/fakecloud"
homepage = "https://fakecloud.dev"
rust-version = "1.94"
version = "0.8.1"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
hyper = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
quick-xml = { version = "0.37", features = ["serialize"] }
thiserror = "2"
clap = { version = "4", features = ["derive", "env"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
percent-encoding = "2"
base64 = "0.22"
flate2 = "1"
http = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
async-trait = "0.1"
parking_lot = "0.12"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
crc32fast = "1"
reqwest = { version = "0.13", features = ["json"] }
zip = "2"
tempfile = "3"
regex = "1"
tokio-postgres = "0.7"

# Internal crates
fakecloud-core = { path = "crates/fakecloud-core", version = "0.8.1" }
fakecloud-aws = { path = "crates/fakecloud-aws", version = "0.8.1" }
fakecloud-sqs = { path = "crates/fakecloud-sqs", version = "0.8.1" }
fakecloud-sns = { path = "crates/fakecloud-sns", version = "0.8.1" }
fakecloud-eventbridge = { path = "crates/fakecloud-eventbridge", version = "0.8.1" }
fakecloud-iam = { path = "crates/fakecloud-iam", version = "0.8.1" }
fakecloud-ssm = { path = "crates/fakecloud-ssm", version = "0.8.1" }
fakecloud-s3 = { path = "crates/fakecloud-s3", version = "0.8.1" }
fakecloud-dynamodb = { path = "crates/fakecloud-dynamodb", version = "0.8.1" }
fakecloud-lambda = { path = "crates/fakecloud-lambda", version = "0.8.1" }
fakecloud-secretsmanager = { path = "crates/fakecloud-secretsmanager", version = "0.8.1" }
fakecloud-logs = { path = "crates/fakecloud-logs", version = "0.8.1" }
fakecloud-kms = { path = "crates/fakecloud-kms", version = "0.8.1" }
fakecloud-cloudformation = { path = "crates/fakecloud-cloudformation", version = "0.8.1" }
fakecloud-ses = { path = "crates/fakecloud-ses", version = "0.8.1" }
fakecloud-cognito = { path = "crates/fakecloud-cognito", version = "0.8.1" }
fakecloud-kinesis = { path = "crates/fakecloud-kinesis", version = "0.8.1" }
fakecloud-rds = { path = "crates/fakecloud-rds", version = "0.8.1" }
fakecloud-elasticache = { path = "crates/fakecloud-elasticache", version = "0.8.1" }
fakecloud-stepfunctions = { path = "crates/fakecloud-stepfunctions", version = "0.8.1" }
fakecloud-apigatewayv2 = { path = "crates/fakecloud-apigatewayv2", version = "0.8.1" }
fakecloud-bedrock = { path = "crates/fakecloud-bedrock", version = "0.8.1" }
fakecloud-sdk = { path = "crates/fakecloud-sdk", version = "0.8.1" }
