[package]
name = "fakecloud-aws"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
bytes = { workspace = true }
chrono = { workspace = true }
http = { workspace = true }
quick-xml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
