[package]
name = "fakecloud-conformance-macros"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
publish = false

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
serde_json = "1"
sha2 = "0.11"
