[package]
name = "fakecloud-conformance"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
publish = false

[[bin]]
name = "fakecloud-conformance"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
tokio = { workspace = true }
clap = { workspace = true }
regex = "1"

[dev-dependencies]
fakecloud-conformance-macros = { path = "../fakecloud-conformance-macros" }
aws-config = "1"
aws-sdk-sqs = "1"
aws-sdk-sns = "1"
aws-sdk-eventbridge = "1"
aws-sdk-iam = "1"
aws-sdk-sts = "1"
aws-sdk-ssm = "1"
aws-sdk-s3 = "1"
aws-sdk-dynamodb = "1"
aws-sdk-lambda = "1"
aws-sdk-secretsmanager = "1"
aws-sdk-cloudwatchlogs = "1"
aws-sdk-kms = "1"
aws-sdk-cloudformation = "1"
aws-sdk-sesv2 = "1"
aws-sdk-cognitoidentityprovider = "1"
aws-smithy-types = "1"
aws-credential-types = "1"
aws-types = "1"
tokio = { workspace = true }
zip = { workspace = true }
