[package]
name = "fakecloud"
description = "Local AWS cloud emulator"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
homepage.workspace = true

[[bin]]
name = "fakecloud"
path = "src/main.rs"

[dependencies]
fakecloud-core = { workspace = true }
fakecloud-aws = { workspace = true }
fakecloud-sqs = { workspace = true }
fakecloud-sns = { workspace = true }
fakecloud-eventbridge = { workspace = true }
fakecloud-iam = { workspace = true }
fakecloud-ssm = { workspace = true }
fakecloud-s3 = { workspace = true }
fakecloud-logs = { workspace = true }
fakecloud-kms = { workspace = true }
axum = { workspace = true }
parking_lot = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
