[package]
name = "fakecloud"
description = "Local AWS cloud emulator — free, open-source LocalStack alternative"
keywords = ["aws", "cloud", "emulator", "localstack", "testing"]
categories = ["development-tools::testing", "simulation"]
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
homepage.workspace = true

[[bin]]
name = "fakecloud"
path = "src/main.rs"

[dependencies]
fakecloud-core = { workspace = true }
fakecloud-aws = { workspace = true }
fakecloud-sqs = { workspace = true }
fakecloud-sns = { workspace = true }
fakecloud-eventbridge = { workspace = true }
fakecloud-iam = { workspace = true }
fakecloud-ssm = { workspace = true }
fakecloud-s3 = { workspace = true }
fakecloud-dynamodb = { workspace = true }
fakecloud-lambda = { workspace = true }
fakecloud-secretsmanager = { workspace = true }
fakecloud-logs = { workspace = true }
fakecloud-kms = { workspace = true }
fakecloud-cloudformation = { workspace = true }
fakecloud-ses = { workspace = true }
fakecloud-cognito = { workspace = true }
fakecloud-kinesis = { workspace = true }
fakecloud-rds = { workspace = true }
fakecloud-elasticache = { workspace = true }
fakecloud-stepfunctions = { workspace = true }
fakecloud-sdk = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
