[package]
name = "fakecloud-ses"
description = "SES v2 implementation for FakeCloud"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true

[dependencies]
fakecloud-core = { workspace = true }
fakecloud-aws = { workspace = true }
async-trait = { workspace = true }
form_urlencoded = "1"
chrono = { workspace = true }
http = { workspace = true }
parking_lot = { workspace = true }
percent-encoding = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
tokio = { workspace = true }
