[package]
name = "fakecloud-sqs"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
fakecloud-aws = { workspace = true }
fakecloud-core = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
http = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
md-5 = { workspace = true }
tokio = { workspace = true }
base64 = { workspace = true }
