[package]
name = "fakecloud-ssm"
description = "SSM implementation for FakeCloud"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true

[dependencies]
fakecloud-aws = { workspace = true }
fakecloud-core = { workspace = true }
fakecloud-secretsmanager = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
http = { workspace = true }
md5 = "0.8"
sha2 = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
