[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fakecloud"
version = "0.1.0"
description = "Python SDK for fakecloud — local AWS cloud emulator"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = ["httpx>=0.24"]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.21", "respx>=0.21"]

[tool.hatch.build.targets.wheel]
packages = ["src/fakecloud"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
