[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fakecloud"
version = "0.8.1"
description = "Python SDK for fakecloud — local AWS cloud emulator"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.9"
dependencies = ["httpx>=0.24"]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.21", "boto3>=1.28", "ruff>=0.4", "mypy>=1.10"]

[tool.hatch.build.targets.wheel]
packages = ["src/fakecloud"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
strict = true

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
